added observations and motivation

--- a/jupyter_notebook/notebook.ipynb
+++ b/jupyter_notebook/notebook.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -153,18 +153,10 @@
       "Requirement already satisfied: packaging in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from keras-tuner) (21.3)\n",
       "Requirement already satisfied: kt-legacy in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from keras-tuner) (1.0.5)\n",
       "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from packaging->keras-tuner) (3.0.4)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from requests->keras-tuner) (2.0.4)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from requests->keras-tuner) (1.26.12)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from requests->keras-tuner) (2.0.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from requests->keras-tuner) (2022.12.7)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/tnathu-ai/.conda/envs/Advanced_Programming_for_Data_Science/lib/python3.10/site-packages (from requests->keras-tuner) (3.3)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/bt/7ws71xxn45bffcbhj7ddvm080000gn/T/ipykernel_12451/3900132706.py:60: DeprecationWarning: `import kerastuner` is deprecated, please use `import keras_tuner`.\n",
-      "  from kerastuner.tuners import RandomSearch\n"
      ]
     }
    ],
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +252,7 @@
        "'2.10.0'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +363,7 @@
        "2       22407          1  22407.png   fibroblast         0            0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +499,7 @@
        "2  Image_classification_data/patch_images/22407.png  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +623,7 @@
        "cellType       1.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -740,17 +732,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "The number of unique patientIDs negative for cancer is 60\n",
       "The cellTypeNames for patients negative for cancer are ['fibroblast' 'inflammatory' 'others']\n",
-      "\n"
+      "\n",
+      "The cellTypeNames for patients positive for cancer are ['epithelial']\n"
      ]
     },
     {
@@ -813,10 +804,11 @@
     }
    ],
    "source": [
-    "# number of unique patientIDs negative for cancer\n",
-    "print(f'\\nThe number of unique patientIDs negative for cancer is {len(main_data[main_data[\"isCancerous\"] == 0][\"patientID\"].unique())}')\n",
+    "\n",
     "# cellTypeNames for patients negative for cancer\n",
     "print(f'The cellTypeNames for patients negative for cancer are {main_data[main_data[\"isCancerous\"] == 0][\"cellTypeName\"].unique()}\\n')\n",
+    "# cellTypeNames for patients positive for cancer\n",
+    "print(f'The cellTypeNames for patients positive for cancer are {main_data[main_data[\"isCancerous\"] == 1][\"cellTypeName\"].unique()}')\n",
     "\n",
     "# Plot the distribution of isCancerous labels\n",
     "plt.figure(figsize=(6, 4))\n",
@@ -1269,15 +1261,15 @@
     "+ **Confusion Matrix:** The confusion matrix is a handy presentation of the accuracy of a model with two or more classes. For each class, it shows the distribution of its instances classified into all classes. This allows us to see not just where the model is getting it right but, more importantly, where it is getting it wrong - which classes are being confused with each other and where the model's weaknesses lie.\n",
     "Therefore, both of these evaluation methods will give us a better insight into how well our model performs in each class, which is especially important when dealing with imbalanced datasets.\n",
     "\n",
-    "+ While we can **use accuracy to get a sense of overfitting or underfitting**, there are better metrics for model performance in the case of imbalanced datasets. Precision, recall, F1-score, and AUC-ROC are better alternatives. For a cancer cell type classification problem, the criticality of each metric often depends on the specific context and use case. However, in general, due to the severe consequences of misclassification, particularly false negatives, the following metrics are often considered important:\n",
+    "While we can **use accuracy to get a sense of overfitting or underfitting**, we use better metrics for test set model performance in the case of imbalanced datasets. Precision, recall, F1-score, and AUC-ROC are better alternatives. For a cancer cell type classification problem, the criticality of each metric often depends on the specific context and use case. However, in general, due to the severe consequences of misclassification, particularly false negatives, the following metrics are often considered important:\n",
     "\n",
-    "**Precision (Positive Predictive Value):** This is the proportion of true positives out of all positive results (both true positives and false positives). High precision means that it is likely correct when the model predicts a cell as cancerous. In a cancer detection context, precision is crucial to avoid overdiagnosis and unnecessary treatments that can have harmful side effects and increase healthcare costs.\n",
+    "+ **Precision (Positive Predictive Value):** This is the proportion of true positives out of all positive results (both true positives and false positives). High precision means that it is likely correct when the model predicts a cell as cancerous. In a cancer detection context, precision is crucial to avoid overdiagnosis and unnecessary treatments that can have harmful side effects and increase healthcare costs.\n",
     "\n",
-    "**Recall (Sensitivity or True Positive Rate):** This is the proportion of true positives out of all actual positive cases (true positives and false negatives). High recall means the model correctly identifies a high proportion of all cancerous cells. In a cancer detection context, recall is particularly critical because failing to identify a cancerous cell (false negative) can lead to delayed or missed treatment, potentially leading to severe health consequences.\n",
+    "+ **Recall (Sensitivity or True Positive Rate):** This is the proportion of true positives out of all actual positive cases (true positives and false negatives). High recall means the model correctly identifies a high proportion of all cancerous cells. In a cancer detection context, recall is particularly critical because failing to identify a cancerous cell (false negative) can lead to delayed or missed treatment, potentially leading to severe health consequences.\n",
     "\n",
-    "**F1-Score:** This is the harmonic mean of precision and recall, and it tries to balance these two metrics. It is particularly useful if there is an uneven class distribution, as precision and recall might give misleading results in such a case.\n",
+    "+ **F1-Score:** This is the harmonic mean of precision and recall, and it tries to balance these two metrics. It is particularly useful if there is an uneven class distribution, as precision and recall might give misleading results in such a case.\n",
     "\n",
-    "**AUC-ROC (Area Under the Receiver Operating Characteristics Curve):** This metric considers the trade-off between sensitivity (true positive rate) and specificity (true negative rate). An AUC-ROC of 1.0 indicates perfect classification, while an AUC-ROC of 0.5 indicates a model that is no better than random guessing. This metric is widely used in binary classification problems and can indicate the model's performance across different thresholds.\n"
+    "+ **AUC-ROC (Area Under the Receiver Operating Characteristics Curve):** This metric considers the trade-off between sensitivity (true positive rate) and specificity (true negative rate). An AUC-ROC of 1.0 indicates perfect classification, while an AUC-ROC of 0.5 indicates a model that is no better than random guessing. This metric is widely used in binary classification problems and can indicate the model's performance across different thresholds.\n"
    ]
   },
   {
@@ -1357,7 +1349,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7. Baseline Model - traditional neural network (not CNN)"
+    "# 7. Baseline Model - traditional neural network (not CNN)\n",
+    "\n",
+    "A baseline model is a simple, often traditional, machine learning model that is easy to understand and implement. Despite its simplicity, it is expected to perform reasonably well on the problem. The performance of this baseline model then serves as a benchmark for other models. Any advanced model we develop must outperform this baseline to be considered valuable. In the case of our study, we chose a traditional neural network as our baseline model. Several reasons drove this decision. \n",
+    "\n",
+    "+ Firstly, neural networks have been successfully applied in various classification tasks, demonstrating their robustness and versatility. Despite being relatively simple compared to more recent variations and architectures, traditional neural networks can capture complex patterns in data, making them a reasonable first choice for our task.\n",
+    "\n",
+    "+ Secondly, the structure of our chosen neural network is straightforward, comprising a couple of dense layers interspersed with dropout layers for regularization. This simplicity aids in the interpretability of the model, allowing us to understand how the model works and what aspects might need improving.\n",
+    "\n",
+    "+ Lastly, this traditional neural network is a stepping stone for more complex models. By understanding its performance and limitations, we gain insights to guide the development and fine-tuning of more advanced models, such as convolutional neural networks, for our cancer cell-type classification task. Therefore, the traditional neural network model serves as our baseline, helping us to establish a performance benchmark and gain critical insights that inform the development of more sophisticated models."
    ]
   },
   {
@@ -1606,9 +1606,12 @@
    "source": [
     "### ---------> OBSERVATION:\n",
     "\n",
-    "The training and validation process of both models is stuck. The accuracy on both training and validation sets is not improving over epochs. Furthermore, cell_type classifier is overfitting. This could be because the models could be too simple. Based on the confusion matrices and the other evaluation metrics, the models need to perform better on the classification tasks. \n",
+    "Our analysis of the performance of two traditional neural network models, each designed for different tasks, revealed a stark contrast in their behaviors.\n",
     "\n",
-    "+ **Is Cancerous Model:** The confusion matrix shows that the model predicts all instances as 'not cancerous', which indicates that it is highly biased towards the negative class. This is also reflected in the precision, recall, and F1-score, which are all 0%. The ROC AUC score of 0.5 indicates that the model has no discriminative power between the classes.\n",
+    "#### Is Cancerous Model:\n",
+    ">> The first model, \"Traditional Neural Network (Is Cancerous),\" demonstrated a significant discrepancy between its training and validation performance. While it achieved high accuracy during training, the corresponding validation accuracy was noticeably lower. The loss function also showed high values, indicating that the model might struggle to fit the training data. Interestingly, the validation performance was better than the training performance. The model showed promising results for the test set, with a precision of 0.840686, recall of 0.84901, F1-score of 0.844828, and an AUC of 0.869044. This disparity between training and validation performance suggests that the model might be underfitting the training data, implying that it could benefit from a more complex architecture or additional training.\n",
+    "\n",
+    ">> The confusion matrix shows that the model predicts all instances as 'not cancerous', which indicates that it is highly biased towards the negative class. This is also reflected in the precision, recall, and F1-score, which are all 0%. The ROC AUC score of 0.5 indicates that the model has no discriminative power between the classes.\n",
     "The confusion matrix for  `is_cancerous` classifier:\n",
     "```\n",
     "[[1172    0]\n",
@@ -1616,7 +1619,11 @@
     "```\n",
     ">> This matrix tells us that our model predicted 1172 instances correctly as non-cancerous (True Negatives). However, it failed to correctly predict any cancerous instances, as indicated by the 808 instances incorrectly predicted as non-cancerous (False Negatives). There were no False Positives or True Positives. This indicates that the model needs to predict cancerous cells better, as it failed to predict any correctly.\n",
     "\n",
-    "+ **Cell Type Model:** This model is also highly biased, predicting all instances as belonging to one class. This is reflected in the low precision, recall, and F1-score values. The ROC AUC score of 0.5 also suggests that the model has no discriminative power between the classes.\n",
+    "#### Cell Type Model\n",
+    "\n",
+    ">> On the other hand, the \"Traditional Neural Network (Cell Type)\" model showed a different pattern. The validation accuracy was lower than the training accuracy, and the model suffered from high loss values worse than those seen during training. This indicates that the model might need to be more balanced with the training data, which results in poor generalization of unseen data. The performance on the test set for this model was less satisfactory, with precision, recall, F1-score, and AUC values of 0.102020, 0.25000, 0.144907, and 0.500000, respectively. This performance dip on the test set is a clear sign of overfitting, and solutions might involve simplifying the model, introducing regularization, or augmenting the training data.\n",
+    "\n",
+    ">> This model is also highly biased, predicting all instances as belonging to one class. This is reflected in the low precision, recall, and F1-score values. The ROC AUC score of 0.5 also suggests that the model has no discriminative power between the classes.\n",
     "The confusion matrix for the  `cell_type` classifier looks like this:\n",
     "```\n",
     "[[  0   0 366   0]\n",
@@ -1625,6 +1632,7 @@
     " [  0   0 281   0]]\n",
     "```\n",
     ">> This matrix tells us that our model consistently predicts one class (the third class) for all instances, regardless of their true class. For every row, the third column has all the predictions (366, 525, 808, and 281). This indicates a severe problem as the model must be more effective in distinguishing between classes. It is effectively predicting the same class for all instances.\n",
+    "\n",
     "\n",
     "#### Recommendations to Improve Performance\n",
     "+ **Modify Model Architecture:** We could make the model more complex by adding more layers or neurons in each layer. We could also try a different model type, such as a Convolutional Neural Network (CNN), which is typically good for image data.\n",
